--- a/thanos-parquet-gateway/charts/templates/convert/deployment.yaml
+++ b/thanos-parquet-gateway/charts/templates/convert/deployment.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.thanosParquetGateway.convert.enabled }}
+{{ if .Values.thanosParquetGateway.convert.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
