chore(ingress-nginx): bump plugindefinition version (#1393)
* chore(ingress-nginx): bump plugindefinition version

* Update ingress-nginx version format to v4.14.3

* fix(ci): do not remove ingress-nginx v-prefix on chart version

--- a/ingress-nginx/plugindefinition.yaml
+++ b/ingress-nginx/plugindefinition.yaml
@@ -6,7 +6,7 @@ kind: PluginDefinition
 metadata:
   name: ingress-nginx
 spec:
-  version: 1.2.5
+  version: 1.2.6
   displayName: Ingress NGINX
   description: Ingress NGINX controller for Kubernetes
   docMarkDownUrl: https://raw.githubusercontent.com/cloudoperators/greenhouse-extensions/main/ingress-nginx/README.md
@@ -14,7 +14,7 @@ spec:
   helmChart:
     name: ingress-nginx
     repository: oci://registry.k8s.io/ingress-nginx/charts
-    version: 4.14.3
+    version: v4.14.3
   options:
     - name: controller.service.loadBalancerIP
       description: IP address of the associated load balancer.
