--- a/thanos-parquet-gateway/charts/templates/convert/secret.yaml
+++ b/thanos-parquet-gateway/charts/templates/convert/secret.yaml
@@ -1,9 +1,10 @@
 {{- if .Values.thanosParquetGateway.convert.enabled }}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: {{ include "release.name" . }}-convert
-data:
+type: Opaque
+stringData:
   convert_source.yaml: |
     type: S3
     config:
