--- a/thanos-parquet-gateway/charts/templates/serve/secret.yaml
+++ b/thanos-parquet-gateway/charts/templates/serve/secret.yaml
@@ -1,9 +1,10 @@
 {{- if .Values.thanosParquetGateway.serve.enabled }}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: {{ include "release.name" . }}-serve
-data:
+type: Opaque
+stringData:
   store_config.yaml: |
     type: S3
     config:
