--- a/thanos-parquet-gateway/charts/templates/convert/service.yaml
+++ b/thanos-parquet-gateway/charts/templates/convert/service.yaml
@@ -14,6 +14,11 @@ metadata:
     {{- end }}
   name: {{ include "release.name" . }}-convert
 spec:
+  ports:
+  - name: http
+    port: 6060
+    protocol: TCP
+    targetPort: http
   selector:
     app.kubernetes.io/managed-by: {{ include "release.name" . }}
     app.kubernetes.io/name: convert
