--- a/kafka/chart/values.yaml
+++ b/kafka/chart/values.yaml
@@ -147,6 +147,10 @@ cruiseControl:
 monitoring:
   # -- Enable Prometheus monitoring
   enabled: true
+  # -- Pod Monitor configuration
+  podMonitor:
+    # -- Labels to add to the PodMonitor so Prometheus can discover it.
+    labels: {}
 
   # -- Additional labels for PrometheusRule alerts
   additionalRuleLabels: {}
